--- a/biblioflex-ui/src/app/features/books/book-page/book-page.component.scss
+++ b/biblioflex-ui/src/app/features/books/book-page/book-page.component.scss
@@ -101,3 +101,18 @@
   margin-top: 3rem;
   font-size: 1.2rem;
 }
+
+.styled-delete {
+  background-color: #e53935;
+  color: #fff;
+  border: none;
+  padding: 0.5em 1.2em;
+  margin-left: 1em;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background 0.2s;
+}
+.styled-delete:hover {
+  background-color: #b71c1c;
+}
